--- a/Primera entrega del proyecto final/style.css
+++ b/Primera entrega del proyecto final/style.css
@@ -18,31 +18,59 @@ body {
 }
 
 /* ----- FORMULARIO DE CONTACTO ----- */
+
 .formulario__uno {
-  display: grid;
-  flex-direction: column;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  padding: 20px 0 40px 0;
+  padding: 50px;
+}
+
+.formulario__contactanos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #fff;
+  width: 60%;
+  height: auto;
+  padding: 20px 50px 20px 50px;
+}
+
+.formulario__contactanos {
+  border-color: #cd6032;
+  border-style: solid;
+  box-shadow: 5px 10px 18px #151515;
+  border-radius: 10px;
+  border-width: 3px;
 }
 
 .titulo_contactanos {
   display: flex;
-  font-size: 30px;
-  justify-content: center;
-  padding-bottom: 20px;
+  flex-direction: column;
+  align-items: center;
+  font-size: 28px;
+  padding: 20px 0 10px 0;
 }
 .texto_contactanos {
   display: flex;
   font-size: 18px;
-  justify-content: center;
   padding-bottom: 20px;
+}
+
+input[type="checkbox"]:checked {
+  width: 18px;
+  height: 18px;
+}
+
+input[type="checkbox"] {
+  transition: all 0.4s;
 }
 
 .formulario__label {
   display: block;
   font-weight: bold;
   font-size: 15px;
-  padding: 10px 0 10px 0;
+  padding: 20px 0 10px 0;
   cursor: pointer;
 }
 
@@ -52,7 +80,7 @@ body {
 
 .formulario__input {
   width: 100%;
-  background: #ffff;
+  background: #fff;
   border: 1px solid;
   border-radius: 3px;
   height: 45px;
@@ -68,6 +96,7 @@ body {
 }
 
 .formulario__input-error {
+  color: #bb2929;
   font-size: 13px;
   margin: 10px 0 5px 0;
   display: none;
@@ -100,7 +129,7 @@ body {
 
 .formulario__mensaje-exito {
   height: 60px;
-  width: 35%;
+  width: 50%;
   padding: 20px 20px 30px 20px;
   background: #29c436;
   font-size: 20px;
@@ -110,7 +139,7 @@ body {
 
 .formulario__mensaje {
   height: 60px;
-  width: 50%;
+  width: 70%;
   background: #f66060;
   padding: 20px 20px 30px 20px;
   border-radius: 3px;
@@ -119,7 +148,7 @@ body {
 
 .formulario__mensaje p {
   margin: 0;
-  color: #000;
+  color: #000000;
   font-size: 20px;
 }
 
@@ -132,13 +161,15 @@ body {
 .btn__dos {
   display: flex;
   flex-direction: row;
+  padding: 10px 0 20px 40px;
+  justify-content: flex-end;
 }
 .formulario__btn {
   height: 45px;
   width: 150px;
-  margin-right: 15px;
-  background-color: #000;
-  color: #ffff;
+  margin-left: 15px;
+  background-color: #000000;
+  color: #fff;
   font-weight: bold;
   font-size: 15px;
   border-radius: 5px;
@@ -170,64 +201,87 @@ body {
   border: 2px solid #bb2929;
 }
 
-/* ----- FORMULARIO DE COTIZACIÓN PARA RESERVA Y ALQUILER DE SALÓN ----- */
+/* ----- FORMULARIO DE COTIZACIÓN PARA ALQUILER DE SALÓN ----- */
 
 .formulario__dos {
-  display: grid;
-  flex-direction: column;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  background-color: rgb(219, 216, 216);
-  padding: 30px 0 40px 10px;
+  padding: 20px 40px 20px 40px;
+}
+
+.formulario {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #fff;
+  width: 70%;
+  height: auto;
+  padding: 20px 40px 20px 50px;
+}
+
+.formulario {
+  border-color: #cd6032;
+  border-style: solid;
+  box-shadow: 5px 10px 18px #151515;
+  border-radius: 10px;
+  border-width: 3px;
 }
 
 .titulo_cotizacion {
   display: flex;
-  font-size: 30px;
-  justify-content: center;
-  padding-bottom: 20px;
+  flex-direction: column;
+  font-size: 28px;
+  padding: 20px 0 10px 0;
+  align-items: center;
 }
 
 .texto_cotizacion {
-  display: flex;
-  font-size: 20px;
-  justify-content: center;
-  padding-bottom: 20px;
+  font-size: 18px;
+  padding: 0 10px 20px 5px;
 }
 
-.fecha {
-  width: 120px;
-  height: 30px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-.numHoras {
-  width: 90px;
-  height: 30px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-.numPersonas {
-  width: 90px;
-  height: 30px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-
-.servicios_salon,
-.turnos,
-.opciones,
-.preguntas_evento {
+.palabra_servicio,
+.palabra_fecha,
+.palabra_horas,
+.palabra_invitados {
   font-size: 16px;
-  padding: 10px 0 10px 0;
+  font-weight: bold;
 }
 
-.opciones > input {
-  margin: 7px;
+#opciones {
+  padding: 5px;
+}
+
+.opciones_evento {
+  font-size: 15px;
+  padding: 10px 0 10px 0;
+  display: inline-block;
+}
+
+.opciones_evento > input {
+  margin: 0 5px 0 20px;
 }
 
 .servicios_dos {
   display: flex;
-  flex-direction: row;
+  flex-direction: row; /*column para mobile*/
+  padding: 5px;
+}
+
+.turnos {
+  font-size: 15px;
+  margin: 10px 0 10px 0;
+  display: inline-block;
+}
+
+.turnos > input {
+  margin: 0 5px 0 20px;
+}
+
+.servicios_salon {
+  font-size: 15px;
+  margin: 5px 5px 0 40px;
 }
 
 .servicios {
@@ -237,20 +291,57 @@ body {
   font-size: 14px;
 }
 
-.turnos > input {
-  margin: 7px;
+.opciones_tres {
+  display: flex;
+  flex-direction: row; /* column para mobile*/
+  padding: 5px 5px 15px 5px;
 }
 
-.btn_cuatro {
+.fecha {
+  width: 120px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.fecha_evento {
+  margin-right: 50px;
+}
+
+.numHoras {
+  width: 70px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.cantidad_horas {
+  margin-right: 50px;
+}
+
+.numPersonas {
+  width: 70px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.cantidad_personas {
+  margin-right: 50px;
+}
+
+.btn_uno {
   display: flex;
   flex-direction: row;
+  padding: 20px 0 10px 0;
+  justify-content: flex-end;
 }
 .boton_cotizar {
   height: 45px;
   width: 180px;
-  margin-right: 15px;
-  background-color: #000;
-  color: #ffff;
+  margin: 5px 15px 0 0;
+  background-color: #000000;
+  color: #fff;
   font-weight: bold;
   font-size: 15px;
   border-radius: 5px;
@@ -262,12 +353,17 @@ body {
   box-shadow: 3px 0px 30px #a3a3a366;
 }
 
+.disabled-link {
+  pointer-events: none;
+  display: none;
+}
+
 .boton_reservar {
   height: 45px;
   width: 180px;
-  margin-right: 15px;
-  background-color: #000;
-  color: #ffff;
+  margin: 5px 0 10px 25px;
+  background-color: #cd6032;
+  color: #fff;
   font-weight: bold;
   font-size: 15px;
   border-radius: 5px;
@@ -279,4 +375,34 @@ body {
   box-shadow: 3px 0px 30px #a3a3a366;
 }
 
-/* ----- FORMULARIO DE RESERVA DE SALÓN ----- */
+.result {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 17px 20px 12px 10px;
+}
+
+.result_reserva {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 17px 0 12px 10px;
+}
+
+.texto_reserva {
+  font-size: 15px;
+  font-weight: bold;
+  color: #cd6032;
+  margin-top: 18px;
+  margin-right: 5px;
+}
+
+.formulario__input-error__tres {
+  color: #bb2929;
+  font-size: 13px;
+  margin-top: 4px;
+  margin-bottom: 7px;
+  display: none;
+}
+
+.formulario__input-error-activo__tres {
+  display: block;
+}
